--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon main.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/kaenova/antri-in-gateway#readme",
   "dependencies": {
-    "ngrok": "^4.2.2"
+    "express": "^4.17.1",
+    "ngrok": "^4.2.2",
+    "nodemon": "^2.0.15"
   }
 }
