--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,14 @@ user nobody;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
+error_log /dev/null;
 
 events {
 	worker_connections 1024;
 }
 
 http {
+    access_log /dev/null; 
 
     server {
 
